fix: keep placeholder visible in material theme fixes #358

--- a/src/ng-select/ng-select.component.scss
+++ b/src/ng-select/ng-select.component.scss
@@ -44,7 +44,6 @@
             cursor: default;
         }
     }
-    .ng-has-value,
     &.filtered {
         .ng-placeholder {
             display: none;
